# ps2-b2bomber

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: docker-compose.yaml
cmake/: embed_irx.cmake
ee/: CMakeLists.txt
ee/include/: input_manager.h  irx_embed_symbols.h
ee/src/: CMakeLists.txt  input_manager.c  main.c
scripts/: build-release.sh  deploy-over-ps2link.sh  stop-ee.sh
